hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_export_basic2.php
<?php
Class c {
	private $a;
	static private $b;
}

class d extends c {}

ReflectionClass::export("c");
ReflectionClass::export("d");
?>
